@@ -8,9 +8,6 @@ import cuke4duke.junit.JunitCukeSteps;
 
 public class CucumberRunnerTest {
     @Test
-    public void dummy() {}
-
-    @Test
     public void shouldBeAbleToRunSingleFeature() throws BSFException {
         Visitor visitor = mock(Visitor.class);
         StepMother stepMother = new PicoContainerStepMother();
